--- a/Feature_Extraction.ipynb
+++ b/Feature_Extraction.ipynb
@@ -768,12 +768,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Save the processed sample into pickle (sma)"
+    "### Save the processed sample into pickle (smaller than csv)"
    ]
   },
   {
@@ -784,6 +782,13 @@
    "source": [
     "(train_df.drop(columns_arrays, axis=1)).to_pickle('train10000_mod.pickle')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
