update the main notebook striping off evaluation and submission (moved to another notebooks)

--- a/EDA_and_xgboost.ipynb
+++ b/EDA_and_xgboost.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -19,8 +17,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Used to save and load models. Speculated to be faster for large models in\n",
+    "#https://machinelearningmastery.com/save-gradient-boosting-models-xgboost-python/\n",
+    "import joblib\n",
+    "#XGBoost itself\n",
+    "import xgboost as xgb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that classes/tools from sklearn are imported when needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IML2018_tools import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -37,50 +64,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is an ugly workaround to allow reading of pickle files in pandas 0.19 (Misha's local version), while the files were produces in pandas 0.21 (on swan)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "if int(pd.__version__.split('.')[1]) < 20:\n",
-    "    import sys\n",
-    "    import pandas.indexes \n",
-    "    sys.modules['pandas.core.indexes'] = pandas.indexes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def loadInputAsDF(fin_name):\n",
-    "    #read original .npy files\n",
-    "    if '.npy' in fin_name:\n",
-    "        train_array = np.load(fin_name, encoding='bytes')\n",
-    "        train_rec_array = train_array.view(np.recarray)\n",
-    "        return pd.DataFrame.from_records(train_rec_array)\n",
-    "    elif '.pickle' in fin_name:\n",
-    "        return pd.read_pickle(fin_name)\n",
-    "    else: \n",
-    "        print(\"I do not know how to treat this input file: {}\".format(fin_name))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "#train_file_name = 'train10000.npy'\n",
@@ -97,12 +83,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_full = loadInputAsDF(train_file_name)"
+    "train_df = loadInputAsDF(train_file_name, n = None)"
    ]
   },
   {
@@ -111,18 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df_full.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "train_df = train_df_full.sample(n=100000, random_state=314).fillna(-999)"
+    "train_df.shape"
    ]
   },
   {
@@ -140,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.corr()"
+    "sns.heatmap(train_df.corr())"
    ]
   },
   {
@@ -153,9 +126,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(train_df['recojet_pt'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#for var in ['recojet_pt', 'recojet_eta', 'recojet_phi', 'recojet_m',\n",
@@ -169,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Feature engineering and drop some columns"
+    "### Feature engineering (done in a dedicated notebook now) and drop some columns"
    ]
   },
   {
@@ -178,64 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "columns_to_drop = []\n",
-    "columns_arrays = ['constituents_pt', 'constituents_eta',\n",
-    "       'constituents_phi', 'constituents_charge', 'constituents_dxy',\n",
-    "       'constituents_dz', 'constituents_Eem', 'constituents_Ehad']\n",
-    "columns_insignificant = ['recojet_eta', 'recojet_phi', \n",
-    "       'recojet_sd_eta', 'recojet_sd_phi']\n",
-    "columns_insignificant_const = ['constituents_eta_0',\n",
-    "       'constituents_eta_1', 'constituents_eta_2', 'constituents_eta_3',\n",
-    "       'constituents_eta_4', 'constituents_phi_0', 'constituents_phi_1',\n",
-    "       'constituents_phi_2', 'constituents_phi_3', 'constituents_phi_4',\n",
-    "       'constituents_charge_0', 'constituents_charge_1',\n",
-    "       'constituents_charge_2', 'constituents_charge_3',\n",
-    "       'constituents_charge_4']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#columns_to_drop.extend(columns_arrays)\n",
-    "columns_to_drop.extend(columns_insignificant)\n",
-    "columns_to_drop.extend(columns_insignificant_const)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#To be done only if those array columns have not been droped yet\n",
-    "train_df.drop(columns_to_drop, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_df.info()"
+    "dropColumns(train_df, printColumns=True)"
    ]
   },
   {
@@ -248,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -259,12 +180,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(train_df.drop('genjet_sd_m', axis=1), train_df['genjet_sd_m'] , test_size=0.30, random_state=314)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run only if you want to keep jets between 5 and 7 TeV in the test sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Xtest5to7 = (X_test['recojet_pt'] > 5000) & (X_test['recojet_pt'] < 7000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#X_test = X_test[Xtest5to7]\n",
+    "#y_test = y_test[Xtest5to7]"
    ]
   },
   {
@@ -279,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -311,104 +254,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Convert to xgboost input structure"
+    "## Build the XGBoost model and define the metric"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import xgboost as xgb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# construct xgboost.DMatrix from numpy array, treat -999.0 as missing value\n",
-    "xgbmat_train = xgb.DMatrix( data=X_train, label=y_train, missing = np.nan )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "isinstance(xgbmat_train , xgb.DMatrix)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Build the XGBoost model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def evaluate_loss(predictions, truth):  \n",
-    "    #truth is xgb.DMatrix in fact, thust .get_label to get the y column\n",
-    "    if isinstance(truth , xgb.DMatrix):\n",
-    "        t = truth.get_label()\n",
-    "    else:\n",
-    "        t = truth\n",
-    "    ratio = predictions / t\n",
-    "    a = np.nanpercentile(ratio, 84, interpolation='nearest')  \n",
-    "    b = np.nanpercentile(ratio, 16, interpolation='nearest')  \n",
-    "    c = np.nanpercentile(ratio, 50, interpolation='nearest')  \n",
-    "    loss = (a-b)/(2.*c)  \n",
-    "    return loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def evaluate_loss_xgb(predictions, truth):  \n",
-    "    loss = evaluate_loss(predictions, truth)\n",
-    "    return ('xxx', loss)  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "#preliminary parameters. will be fine-tuned in the GridSearch\n",
     "xgb_params = {'max_depth': 5, 'learning_rate':0.1, 'n_estimators':100,\n",
-    "              'silent':1, 'random_state': 314, 'seed': 314, 'n_job':4}"
+    "              'silent':1, 'random_state': 314, 'seed': 314, 'n_jobs':4}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clf = xgb.XGBRegressor(**xgb_params)"
@@ -419,44 +282,6 @@
    "metadata": {},
    "source": [
     "## Do a comparison of feature importance and extract the optimal number of trees"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#an adjusted function from this post: https://www.analyticsvidhya.com/blog/2016/03/complete-guide-parameter-tuning-xgboost-with-codes-python/\n",
-    "def modelfit(alg, X_train, y_train, useTrainCV=True, cv_folds=5, early_stopping_rounds=50):\n",
-    "    \n",
-    "    if useTrainCV:\n",
-    "        xgb_param = alg.get_xgb_params()\n",
-    "        xgtrain = xgb.DMatrix(X_train, label=y_train)\n",
-    "        cvresult = xgb.cv(xgb_param, xgtrain, num_boost_round=alg.get_params()['n_estimators'], nfold=cv_folds,\n",
-    "            metrics='rmse', early_stopping_rounds=early_stopping_rounds, verbose_eval=True)\n",
-    "        alg.set_params(n_estimators=cvresult.shape[0])\n",
-    "        print(\"Decided on {} trees\".format(cvresult.shape[0]))\n",
-    "\n",
-    "    \n",
-    "    #Fit the algorithm on the data\n",
-    "    alg.fit(X_train, y_train, eval_metric=evaluate_loss_xgb)\n",
-    "        \n",
-    "    #Predict training set:\n",
-    "    pred = alg.predict(X_train)\n",
-    "        \n",
-    "    from sklearn.metrics import mean_squared_error\n",
-    "    from math import sqrt\n",
-    "    #Print model report:\n",
-    "    print(\"\\nModel Report\")\n",
-    "    print(\"RMSE : %.4g\" % sqrt(mean_squared_error(y_train, pred)))\n",
-    "    print(\"Custom loss : %.4g\" % evaluate_loss(y_train, pred))\n",
-    "    \n",
-    "    feat_imp = pd.Series(alg.get_booster().get_fscore()).sort_values(ascending=False)\n",
-    "    feat_imp.plot(kind='bar', title='Feature Importances')\n",
-    "    plt.ylabel('Feature Importance Score')"
    ]
   },
   {
@@ -478,9 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV"
@@ -489,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer"
@@ -507,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "param_test1 = {'max_depth': [3,5,7],\n",
@@ -531,9 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "gs1.cv_results_"
@@ -542,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cv_results=[]"
@@ -589,8 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import joblib\n",
-    "joblib.dump(gs1, \"gs1_2it.joblib.dat\")"
+    "#joblib.dump(gs1, \"gs1_2it.joblib.dat\")"
    ]
   },
   {
@@ -637,152 +451,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run XGBoost with the chosen optimal parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#preliminary parameters. will be fine-tuned in the GridSearch\n",
-    "xgb_opt = gs1.best_estimator_.get_params()\n",
-    "xgb_opt['learning_rate'] *=0.5\n",
-    "xgb_opt['n_estimators'] *=2\n",
-    "xgb_opt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf.set_params(**xgb_opt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "clf.fit(X_train, y_train, \n",
-    "        eval_set=[(X_train, y_train), (X_test, y_test)],\n",
-    "        eval_metric=evaluate_loss_xgb,\n",
-    "        verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evals_result = clf.evals_result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "plt.plot(range(clf.get_params()['n_estimators']), \n",
-    "         evals_result['validation_0']['xxx'],\n",
-    "         'b--', label='Train')\n",
-    "plt.plot(range(clf.get_params()['n_estimators']), \n",
-    "         evals_result['validation_1']['xxx'],\n",
-    "         'r-', label='Test')\n",
-    "plt.xlabel('N trees')\n",
-    "plt.ylabel('Desired metrics')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf.set_params(**xgb_opt)\n",
-    "clf.fit(X_train_pca, y_train, \n",
-    "        eval_set=[(X_train_pca, y_train), (X_test_pca, y_test)],\n",
-    "        eval_metric=evaluate_loss_xgb,\n",
-    "        verbose=False)\n",
-    "evals_result = clf.evals_result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "plt.plot(range(clf.get_params()['n_estimators']), \n",
-    "         evals_result['validation_0']['xxx'],\n",
-    "         'b--', label='Train')\n",
-    "plt.plot(range(clf.get_params()['n_estimators']), \n",
-    "         evals_result['validation_1']['xxx'],\n",
-    "         'r-', label='Test')\n",
-    "plt.xlabel('N trees')\n",
-    "plt.ylabel('Desired metrics')\n",
-    "plt.legend()\n",
-    "plt.title('PCA transform of inputs')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf_def = xgb.XGBRegressor(**xgb_params)\n",
-    "\n",
-    "clf_def.fit(X_train_pca, y_train, \n",
-    "        eval_set=[(X_train_pca, y_train), (X_test_pca, y_test)],\n",
-    "        eval_metric=evaluate_loss_xgb,\n",
-    "        verbose=False)\n",
-    "evals_result_def = clf_def.evals_result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "plt.plot(range(clf_def.get_params()['n_estimators']), \n",
-    "         evals_result_def['validation_0']['xxx'],\n",
-    "         'b--', label='Train')\n",
-    "plt.plot(range(clf_def.get_params()['n_estimators']), \n",
-    "         evals_result_def['validation_1']['xxx'],\n",
-    "         'r-', label='Test')\n",
-    "plt.xlabel('N trees')\n",
-    "plt.ylabel('Desired metrics')\n",
-    "plt.legend()\n",
-    "plt.title('PCA transform of inputs DEFAULT XGBoost')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## PCA train"
    ]
   },
@@ -815,68 +483,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import joblib\n",
-    "joblib.dump(gs2, \"gs2.joblib.dat\")"
+    "#joblib.dump(gs2, \"gs2.joblib.dat\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "clf_pca_hyp = xgb.XGBRegressor(**gs2.best_estimator_.get_params())\n",
-    "\n",
-    "clf_pca_hyp.fit(X_train_pca, y_train, \n",
-    "        eval_set=[(X_train_pca, y_train), (X_test_pca, y_test)],\n",
-    "        eval_metric=evaluate_loss_xgb,\n",
-    "        verbose=False)\n",
-    "evals_result_pca_hyp = clf_pca_hyp.evals_result()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,6))\n",
-    "plt.plot(range(clf_pca_hyp.get_params()['n_estimators']), \n",
-    "         evals_result_pca_hyp['validation_0']['xxx'],\n",
-    "         'b--', label='Train')\n",
-    "plt.plot(range(clf_pca_hyp.get_params()['n_estimators']), \n",
-    "         evals_result_pca_hyp['validation_1']['xxx'],\n",
-    "         'r-', label='Test')\n",
-    "plt.xlabel('N trees')\n",
-    "plt.ylabel('Desired metrics')\n",
-    "plt.legend()\n",
-    "plt.title('PCA transform of inputs HYP-optimised XGBoost')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## A dummy check"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate_loss(X_test['recojet_sd_m'], y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": []
   }
@@ -897,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
