adding loss evaluation on the test sample (post comp finale)

--- a/Prepare_Submission.ipynb
+++ b/Prepare_Submission.ipynb
@@ -148,18 +148,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mlisovyi/anaconda2/envs/coursera_aml_yandex/lib/python3.6/site-packages/sklearn/base.py:315: UserWarning: Trying to unpickle estimator GridSearchCV from version 0.18.1 when using version 0.18.2. This might lead to breaking code or invalid results. Use at your own risk.\n",
-      "  UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clf = joblib.load('gs1_2it.joblib.dat').best_estimator_"
+    "clf = joblib.load('gs1_2it_ClfOnly_FullSampleTrained.joblib.dat')"
    ]
   },
   {
@@ -179,8 +170,8 @@
     {
      "data": {
       "text/plain": [
-       "array([  96.61833954,   70.7868042 ,   29.85524559, ...,   97.65010071,\n",
-       "        211.67889404,  258.78384399], dtype=float32)"
+       "array([ 106.23390198,   73.51747131,   45.24868774, ...,   97.11266327,\n",
+       "        215.3613739 ,  297.19360352], dtype=float32)"
       ]
      },
      "execution_count": 10,
@@ -199,6 +190,124 @@
    "outputs": [],
    "source": [
     "np.save('test_pred_X.npy', y_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reproduce the final evaluation (became available after competition end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_arr = np.load('qcd_test_truth.npy', encoding='bytes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note, that the provided file contains a plain array without column names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loss value without any pT cuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mlisovyi/atlas/IML2018/IML_challenge_2018/IML2018_tools.py:81: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  ratio = predictions / t\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.5065615970566035"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_loss(y_test_pred, test_arr[:,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loss value for 5 < pT < 7 TeV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xtest5to7 = (test_df['recojet_sd_pt'] > 5000) & (test_df['recojet_sd_pt'] < 7000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mlisovyi/atlas/IML2018/IML_challenge_2018/IML2018_tools.py:81: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  ratio = predictions / t\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.344810817633795"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_loss(y_test_pred[Xtest5to7], test_arr[:,0][Xtest5to7])"
    ]
   },
   {
